<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
    android:padding="4dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:padding="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatRadioButton
            android:layout_centerInParent="true"
            android:id="@+id/creationDateOldestRB"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@id/creationDateOldestRB"
            android:textSize="18sp"
            android:text="@string/creation_date_from_oldest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:padding="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatRadioButton
            android:layout_centerInParent="true"
            android:id="@+id/creationDateNewestRB"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@id/creationDateNewestRB"
            android:textSize="18sp"
            android:text="@string/creation_date_from_newest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <RelativeLayout
        android:padding="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatRadioButton
            android:layout_centerInParent="true"
            android:id="@+id/titleAtoZ"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@id/titleAtoZ"
            android:textSize="18sp"
            android:text="@string/title_a_to_z"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>


    <RelativeLayout
        android:padding="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatRadioButton
            android:layout_centerInParent="true"
            android:id="@+id/titleZtoA"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@id/titleZtoA"
            android:textSize="18sp"
            android:text="@string/title_z_to_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <RelativeLayout
        android:padding="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatRadioButton
            android:layout_centerInParent="true"
            android:id="@+id/editDateFromOldest"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@id/editDateFromOldest"
            android:textSize="18sp"
            android:text="@string/edit_date_from_oldest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <RelativeLayout
        android:padding="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatRadioButton
            android:layout_centerInParent="true"
            android:id="@+id/editDateFromNewest"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:fontFamily="@font/poppins_medium"

            android:textColor="@color/black"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@id/editDateFromNewest"
            android:textSize="18sp"
            android:text="@string/edit_date_from_newest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
</LinearLayout>