<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/notepadColorDark"
        android:elevation="6dp"
        android:theme="@style/ToolbarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/main_menu"
        app:title="@string/app_name"
        app:titleTextColor="@color/white" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notesRecycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/addNotesBt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:listitem="@layout/notes_item_layout" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:background="@color/white"
        android:backgroundTint="@color/notepadColorDark"
        android:contentDescription="@string/create_notes"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addNotesBt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:fontFamily="@font/poppins_medium"
        android:text="Add Notes"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:background="@color/notepadColorDark"
        app:backgroundTint="@color/notepadColorDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/sortMenuCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/notesRecycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/notepadColorDark"
                android:elevation="4dp"
                android:gravity="center"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="Sort by"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/sortByDateCreatedOldestRel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/creationDateOldestRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:clickable="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_toEndOf="@id/creationDateOldestRB"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/creation_date_from_oldest"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/sortByDateCreatedNewestRel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/creationDateNewestRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:clickable="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_toEndOf="@id/creationDateNewestRB"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/creation_date_from_newest"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/sortByTitleAtoZRel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/titleAtoZ"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:clickable="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_toEndOf="@id/titleAtoZ"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/title_a_to_z"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/sortByTitleZtoARel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/titleZtoA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:clickable="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_toEndOf="@id/titleZtoA"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/title_z_to_a"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/sortByEditDateOldestRel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/editDateFromOldest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:clickable="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_toEndOf="@id/editDateFromOldest"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/edit_date_from_oldest"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/sortByEditDateNewestRel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/editDateFromNewest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:clickable="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_toEndOf="@id/editDateFromNewest"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/edit_date_from_newest"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/closeSortCardBt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Close"
                    android:textAllCaps="false"
                    app:background="@color/notepadColorDark"
                    app:backgroundTint="@color/notepadColorDark" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>